--- a/_includes/coding_activity.html
+++ b/_includes/coding_activity.html
@@ -7,5 +7,5 @@
 
 <!-- Hours Coded -->
 <figure>
-    <embed src="https://wakatime.com/share/@{{site.wakatime_username }}/1550a9f1-d41a-4745-92a0-181a6fbb2456.svg"></embed>
+    <embed src="https://wakatime.com/share/@39ec53ab-3cee-4061-a798-38a89df2b6b2/4b894bc5-47ca-4a14-b119-cee043c0d319.svg"></embed>
 </figure>
