--- a/_includes/coding_activity.html
+++ b/_includes/coding_activity.html
@@ -2,7 +2,7 @@
 
 <!-- Pie Chart -->
 <figure>
-    <embed src="https://wakatime.com/share/@{{site.wakatime_username }}/f540df00-f2d1-46e2-a360-da7e13ed8a66.svg"></embed>
+    <embed src="https://wakatime.com/share/@39ec53ab-3cee-4061-a798-38a89df2b6b2/4b894bc5-47ca-4a14-b119-cee043c0d319.svg"></embed>
 </figure>
 
 <!-- Hours Coded -->
